[gd_scene load_steps=6 format=3 uid="uid://c34dyv5i5a5ho"]

[ext_resource type="Script" path="res://Scripts/Prototypes/tile_spawn.gd" id="1_6bbdk"]
[ext_resource type="PackedScene" uid="uid://bamfqxvw65iu2" path="res://scenes/Environment/basic_tile.tscn" id="2_rxiwa"]
[ext_resource type="TileSet" uid="uid://cloviblshkwle" path="res://resources/tiles/tile_set.tres" id="3_breaw"]
[ext_resource type="Theme" uid="uid://dundj1k3w6wi4" path="res://resources/UI/ButtonTheme.tres" id="4_7y8um"]
[ext_resource type="PackedScene" uid="uid://c65s74ie2kw7m" path="res://scenes/Components/highlight_component.tscn" id="5_uun75"]

[node name="TileSpawn" type="Node2D" node_paths=PackedStringArray("tilemap", "tile_container")]
script = ExtResource("1_6bbdk")
tilemap = NodePath("TileMap")
basic_tile = ExtResource("2_rxiwa")
tile_container = NodePath("GroundTiles")

[node name="HighlightComponent" parent="." instance=ExtResource("5_uun75")]
highlight_color = Color(1, 1, 1, 1)
aoe_color = Color(1, 0.517647, 0.45098, 1)

[node name="GroundTiles" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-128, -64)
tile_set = ExtResource("3_breaw")
format = 2
layer_0/name = "base"
layer_0/tile_data = PackedInt32Array(-65536, 4, 0, -1, 4, 0, -131072, 4, 0, -196608, 4, 0, -262144, 4, 0, 0, 4, 0, 65536, 4, 0, 131072, 4, 0, 196608, 4, 0, 262144, 4, 0, -2, 4, 0, -65535, 4, 0, -65534, 4, 0, -262143, 4, 0, -196607, 4, 0, -131071, 4, 0, -131070, 4, 0, -196606, 4, 0, -196609, 4, 0, -131074, 4, 0, -65538, 4, 0, -131073, 4, 0, -65537, 4, 0, 65535, 4, 0, 131070, 4, 0, 65532, 4, 0, -3, 4, 0, 65533, 4, 0, 65534, 4, 0, 262142, 4, 0, 196607, 4, 0, 262143, 4, 0, 131071, 4, 0, 196606, 4, 0, 196609, 4, 0, 196610, 4, 0, 131074, 4, 0, 65538, 4, 0, 65537, 4, 0, 131073, 4, 0, 1, 4, 0, 4, 4, 0, 3, 4, 0, 2, 4, 0, -65533, 4, 0, -4, 4, 0, -65540, 4, 0, -65539, 4, 0, -131075, 4, 0, 65540, 4, 0, 65539, 4, 0, 131075, 4, 0, 131076, 4, 0, 131069, 4, 0, -131069, 4, 0, -65532, 4, 0, -131068, 4, 0, -196605, 4, 0, 131068, 4, 0, 196604, 4, 0, 196605, 4, 0)
layer_1/name = "elevation"
layer_1/tile_data = PackedInt32Array()

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.5
offset_top = -42.0
offset_right = 70.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="Spawn" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_7y8um")
text = "Spawn"

[node name="Earthquake" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_7y8um")
text = "Earthquake"

[node name="Disco" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_7y8um")
text = "Disco"

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Spawn" to="." method="_on_spawn_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Earthquake" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Disco" to="." method="_on_disco_pressed"]
